--- a/companion/src/modeledit/telemetry.ui
+++ b/companion/src/modeledit/telemetry.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>713</width>
+    <width>757</width>
     <height>457</height>
    </rect>
   </property>
@@ -382,11 +382,11 @@
         </property>
         <item>
          <layout class="QGridLayout" name="gridLayout_34" columnstretch="0,1,1,1">
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
           <property name="horizontalSpacing">
            <number>9</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
           </property>
           <item row="3" column="0">
            <widget class="QLabel" name="label_4">
@@ -539,31 +539,6 @@
             </item>
            </widget>
           </item>
-          <item row="2" column="3">
-           <widget class="QComboBox" name="frskyBladesCB">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <item>
-             <property name="text">
-              <string>2</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>3</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>4</string>
-             </property>
-            </item>
-           </widget>
-          </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_113">
             <property name="sizePolicy">
@@ -606,6 +581,28 @@
             </property>
             <property name="text">
              <string>Serial Protocol</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="3">
+           <widget class="QDoubleSpinBox" name="bladesCount">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="decimals">
+             <number>0</number>
+            </property>
+            <property name="minimum">
+             <double>2.000000000000000</double>
+            </property>
+            <property name="maximum">
+             <double>5.000000000000000</double>
+            </property>
+            <property name="value">
+             <double>2.000000000000000</double>
             </property>
            </widget>
           </item>
