--- a/companion/src/modeledit/setup_module.ui
+++ b/companion/src/modeledit/setup_module.ui
@@ -526,7 +526,7 @@
          </size>
         </property>
         <property name="text">
-         <string>RX Number</string>
+         <string>Receiver No.</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
