Reset button in telemetry log viewer (fix #962)

--- a/companion/src/logsdialog.ui
+++ b/companion/src/logsdialog.ui
@@ -66,16 +66,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -111,6 +102,13 @@
       <widget class="QCheckBox" name="ZoomY_ChkB">
        <property name="text">
         <string>Y</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Reset_PB">
+       <property name="text">
+        <string>Reset</string>
        </property>
       </widget>
      </item>
