--- a/companion/src/modeledit/expodialog.ui
+++ b/companion/src/modeledit/expodialog.ui
@@ -33,7 +33,7 @@
    <item row="2" column="1">
     <widget class="QComboBox" name="sourceCB">
      <property name="whatsThis">
-      <string>The source for the mixer</string>
+      <string>Source for the mixer.</string>
      </property>
     </widget>
    </item>
@@ -73,7 +73,7 @@
      <item>
       <widget class="QComboBox" name="weightCB">
        <property name="whatsThis">
-        <string>Phase used by the input.</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -104,7 +104,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="lb_FP0">
        <property name="text">
-        <string>0</string>
+        <string notr="true">0</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -114,7 +114,7 @@
      <item row="0" column="1">
       <widget class="QLabel" name="lb_FP1">
        <property name="text">
-        <string>1</string>
+        <string notr="true">1</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -124,7 +124,7 @@
      <item row="0" column="2">
       <widget class="QLabel" name="lb_FP2">
        <property name="text">
-        <string>2</string>
+        <string notr="true">2</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -134,7 +134,7 @@
      <item row="0" column="3">
       <widget class="QLabel" name="lb_FP3">
        <property name="text">
-        <string>3</string>
+        <string notr="true">3</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -144,7 +144,7 @@
      <item row="0" column="4">
       <widget class="QLabel" name="lb_FP4">
        <property name="text">
-        <string>4</string>
+        <string notr="true">4</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -154,7 +154,7 @@
      <item row="0" column="5">
       <widget class="QLabel" name="lb_FP5">
        <property name="text">
-        <string>5</string>
+        <string notr="true">5</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -164,7 +164,7 @@
      <item row="0" column="6">
       <widget class="QLabel" name="lb_FP6">
        <property name="text">
-        <string>6</string>
+        <string notr="true">6</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -174,7 +174,7 @@
      <item row="0" column="7">
       <widget class="QLabel" name="lb_FP7">
        <property name="text">
-        <string>7</string>
+        <string notr="true">7</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -184,7 +184,7 @@
      <item row="0" column="8">
       <widget class="QLabel" name="lb_FP8">
        <property name="text">
-        <string>8</string>
+        <string notr="true">8</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -266,7 +266,7 @@
    <item row="9" column="1">
     <widget class="QComboBox" name="switchesCB">
      <property name="whatsThis">
-      <string>Switch used by the input.
+      <string>Switch used to enable the line.
 If blank then the input is considered to be &quot;ON&quot; all the time.</string>
      </property>
     </widget>
@@ -332,17 +332,7 @@ If blank then the input is considered to be &quot;ON&quot; all the time.</string
    <item row="3" column="1">
     <widget class="QDoubleSpinBox" name="scale">
      <property name="whatsThis">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline;&quot;&gt;Delay ans Slow&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-weight:600; text-decoration: underline;&quot;&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;These values control the speed and delay of the output of the mix.  &lt;/p&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If Delay is not zero the actuation of the mix will be delayed by the specified amount of seconds.&lt;/p&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If Slow is not zero then the speed of the mix will be set by the value specified -&amp;gt; the value states the number of seconds it takes to transit from -100 to 100.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -395,7 +385,7 @@ p, li { white-space: pre-wrap; }
         <string/>
        </property>
        <property name="whatsThis">
-        <string>The curve used by the input</string>
+        <string>Curve applied to the source.</string>
        </property>
       </widget>
      </item>
